# isaaclab_xr_teleop

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
isaaclab_xr_teleop/: __init__.py
isaaclab_xr_teleop/devices/: __init__.py  xr_controller.py
isaaclab_xr_teleop/recording/: __init__.py  callbacks.py  loop.py  rate_limiter.py
isaaclab_xr_teleop/retargeters/: __init__.py  gripper_retargeter.py  se3_abs_retargeter.py  se3_rel_retargeter.py
isaaclab_xr_teleop/retargeters/g1/: __init__.py  inspire_hand.py  mink_ik.py  robot_cfg.py
isaaclab_xr_teleop/retargeters/g1/data/mjcf/: g1_upper_ik.xml  scene_g1_upper_ik.xml
isaaclab_xr_teleop/tasks/: __init__.py
isaaclab_xr_teleop/tasks/franka_stack/: __init__.py  env_cfg.py  record.py
isaaclab_xr_teleop/tasks/g1_pick_place/: __init__.py  env_cfg.py  record.py
isaaclab_xr_teleop/tasks/g1_pick_place/mdp/: __init__.py  observations.py  terminations.py
