[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_xr_teleop"
version = "0.1.0"
dependencies = [
    "mink", 
    "mujoco", 
    "loop-rate-limiters", 
    "daqp"
]

[tool.setuptools.packages.find]
include = ["isaaclab_xr_teleop*"]

[tool.setuptools.package-data]
"isaaclab_xr_teleop.retargeters.g1.data" = ["**/*"]
